--- a/index.html
+++ b/index.html
@@ -3583,11 +3583,54 @@
                         <input id="country-search" placeholder="Search country or code" style="flex:1;padding:.5rem .6rem;border:1px solid rgba(255,255,255,.04);border-radius:8px;background:transparent;color:inherit;font-size:0.95rem;">
                     </div>
                 </div>
-                <div id="country-list" style="padding:6px 6px;max-height:58vh;overflow:auto;">
+                <div id="country-list" style="padding:6px 6px;overflow:auto;">
                     <!-- populated dynamically -->
                 </div>
             </div>
         </div>
+
+        <style>
+            /* Make picker panel responsive and allow expansion via handle */
+            .country-panel { max-height: 92vh; overflow: hidden; }
+            #country-list { max-height: calc(92vh - 160px) !important; overflow: auto; }
+            @media (max-width: 480px) { #country-list { max-height: calc(92vh - 180px) !important; } }
+        </style>
+
+        <script>
+        (function(){
+            const picker = document.getElementById('country-picker');
+            if(!picker) return;
+            const panel = picker.querySelector('.country-panel');
+            const handle = panel && panel.querySelector('.picker-handle');
+            if(!panel || !handle) return;
+            let dragging = false, startY = 0, startH = 0;
+            const minH = 140;
+            function clamp(v,a,b){ return Math.max(a, Math.min(b, v)); }
+            handle.style.touchAction = 'none';
+            handle.addEventListener('pointerdown', function onDown(e){
+                dragging = true;
+                startY = e.clientY;
+                startH = panel.getBoundingClientRect().height;
+                try{ handle.setPointerCapture(e.pointerId); }catch(e){}
+            });
+            document.addEventListener('pointermove', function onMove(e){
+                if(!dragging) return;
+                const delta = startY - e.clientY; // drag up -> increase height
+                const maxH = window.innerHeight - 40;
+                const newH = clamp(startH + delta, minH, maxH);
+                panel.style.maxHeight = newH + 'px';
+            });
+            document.addEventListener('pointerup', function onUp(e){
+                if(!dragging) return; dragging = false;
+                try{ handle.releasePointerCapture(e.pointerId);}catch(e){}
+            });
+            window.addEventListener('resize', ()=>{
+                const maxH = window.innerHeight - 40;
+                const cur = parseInt(panel.style.maxHeight) || 0;
+                if(cur) panel.style.maxHeight = Math.min(cur, maxH) + 'px';
+            });
+        })();
+        </script>
 
         <script>
             (function(){
