--- a/index.html
+++ b/index.html
@@ -3578,9 +3578,9 @@
                     <button id="country-picker-close" class="close-btn" style="border:0;color:inherit;font-size:1.2rem;">✕</button>
                 </div>
                 <div style="padding:10px 14px 12px;border-bottom:1px solid rgba(255,255,255,0.02);">
-                    <div style="display:flex;align-items:center;gap:.6rem;">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="opacity:.6"><path d="M11 4a7 7 0 100 14 7 7 0 000-14zm8.707 16.293l-4.387-4.387" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                        <input id="country-search" placeholder="Search country or code" style="flex:1;padding:.5rem .6rem;border:1px solid rgba(255,255,255,.04);border-radius:8px;background:transparent;color:inherit;font-size:0.95rem;">
+                    <div style="position:relative;">
+                        <svg class="country-search-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="opacity:.6;position:absolute;left:12px;top:50%;transform:translateY(-50%);pointer-events:none;"><path d="M11 4a7 7 0 100 14 7 7 0 000-14zm8.707 16.293l-4.387-4.387" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                        <input id="country-search" placeholder="Search country or code" style="width:100%;padding:.5rem .6rem .5rem 40px;border:1px solid rgba(255,255,255,.04);border-radius:8px;background:transparent;color:inherit;font-size:0.95rem;">
                     </div>
                 </div>
                 <div id="country-list" style="padding:6px 6px;overflow:auto;">
@@ -3590,45 +3590,31 @@
         </div>
 
         <style>
-            /* Make picker panel responsive and allow expansion via handle */
-            .country-panel { max-height: 92vh; overflow: hidden; }
-            #country-list { max-height: calc(92vh - 160px) !important; overflow: auto; }
-            @media (max-width: 480px) { #country-list { max-height: calc(92vh - 180px) !important; } }
+/* Make picker panel fixed at 70% of viewport height for consistent appearance */
+            .country-panel { height: 70vh; max-height: 70vh; overflow: hidden; }
+            /* subtract header/search area so the list occupies remaining space */
+            #country-list { max-height: calc(70vh - 140px) !important; overflow: auto; background: transparent; }
+            @media (max-width: 480px) { #country-list { max-height: calc(70vh - 160px) !important; } }
+
+            /* Hide the top handle (visual bar) to match reference */
+            .picker-handle { display: none !important; }
+            /* Make scrollbar track visually minimal/transparent for a cleaner look */
+            #country-list::-webkit-scrollbar-track { background: transparent; }
+            #country-list *::-webkit-scrollbar-track { background: transparent; }
+            #country-list::-webkit-scrollbar-thumb { background-color: rgba(255,255,255,0.06); border-radius:8px; }
+
+            /* picker overlay positioning restored to default (no forced top z-index) */
         </style>
 
         <script>
         (function(){
+            // Keep picker static at 70vh and let the internal list scroll.
             const picker = document.getElementById('country-picker');
             if(!picker) return;
             const panel = picker.querySelector('.country-panel');
-            const handle = panel && panel.querySelector('.picker-handle');
-            if(!panel || !handle) return;
-            let dragging = false, startY = 0, startH = 0;
-            const minH = 140;
-            function clamp(v,a,b){ return Math.max(a, Math.min(b, v)); }
-            handle.style.touchAction = 'none';
-            handle.addEventListener('pointerdown', function onDown(e){
-                dragging = true;
-                startY = e.clientY;
-                startH = panel.getBoundingClientRect().height;
-                try{ handle.setPointerCapture(e.pointerId); }catch(e){}
-            });
-            document.addEventListener('pointermove', function onMove(e){
-                if(!dragging) return;
-                const delta = startY - e.clientY; // drag up -> increase height
-                const maxH = window.innerHeight - 40;
-                const newH = clamp(startH + delta, minH, maxH);
-                panel.style.maxHeight = newH + 'px';
-            });
-            document.addEventListener('pointerup', function onUp(e){
-                if(!dragging) return; dragging = false;
-                try{ handle.releasePointerCapture(e.pointerId);}catch(e){}
-            });
-            window.addEventListener('resize', ()=>{
-                const maxH = window.innerHeight - 40;
-                const cur = parseInt(panel.style.maxHeight) || 0;
-                if(cur) panel.style.maxHeight = Math.min(cur, maxH) + 'px';
-            });
+            if(panel) {
+                panel.style.maxHeight = '70vh';
+            }
         })();
         </script>
 
@@ -3924,15 +3910,31 @@
 
                 function showPicker(){
                     const btnRect = countryBtn.getBoundingClientRect();
-                    // make picker span full viewport width to avoid left gaps
-                    const topPos = (btnRect.bottom + 6);
+                    // Open picker as a top overlay occupying 70% height and above other content
+                    // Position overlay fixed and align panel to top so it appears above inputs
+                    picker.style.position = 'fixed';
                     picker.style.left = '0px';
                     picker.style.right = '0px';
+                    picker.style.top = '0px';
+                    picker.style.bottom = '0px';
                     picker.style.width = '100%';
-                    picker.style.minWidth = 'unset';
-                    picker.style.top = topPos + 'px';
-                    picker.style.borderRadius = '0px';
-                    picker.style.display = 'block';
+                    picker.style.display = 'flex';
+                    picker.style.alignItems = 'flex-end'; // align to bottom
+                    picker.style.justifyContent = 'center';
+                    picker.style.zIndex = '999999';
+                    picker.style.background = 'rgba(0,0,0,0.92)'; // darker backdrop to fully block content
+
+                    // Size the inner panel to 70% of viewport height and keep it centered horizontally
+                    const panelEl = picker.querySelector('.country-panel');
+                    if(panelEl){
+                        panelEl.style.height = '70vh';
+                        panelEl.style.maxHeight = '70vh';
+                        panelEl.style.margin = '0 auto 0'; // bottom-aligned, no bottom margin
+                        panelEl.style.transform = 'translateY(0)';
+                        panelEl.style.borderRadius = '12px 12px 0 0'; // rounded only at top
+                    }
+
+                    // prepare search and list
                     searchEl.value = '';
                     renderList('');
                     setTimeout(()=>searchEl.focus(),50);
